@@ -16,7 +16,15 @@ import java.io.File;
  *
  * /usr/bin
  * ./soffice --accept="socket,host=0,port=8100;urp;StarOffice.ServiceManager" --headless --nofirststartwizard --nologo --nodefault --nocrashreport --nolockcheck
- *  ./soffice --headless --accept="socket,host=0,port=8100;urp;" --nofirststartwizard instead &
+ *  ./soffice -headless -accept="socket,host=127.0.0.1,port=8100;urp;" -nofirststartwizard &
+ *  netstat -ntlp|grep 8100
+ *  进入命令行   ps -a
+ *  找到进openoffice进程ID
+ *  export JAVA_HOME=/usr/local/java/jdk1.8.0_131
+ *  export JRE_HOME=${JAVA_HOME}/jre
+ *  export CLASSPATH=.:${JAVA_HOME}/lib:${JRE_HOME}/lib
+ *  export PATH=${JAVA_HOME}/bin:$PATH
+ *  java -Djava.ext.dirs=/home/xproject/lib/ -cp xproject.jar com.xunyuc.xproject.documentconvert.libreoffice.ConvertTest /home/test.docx /home/test.pdf
  */
 public class ConvertTest {
 
